# compile-time-css

./: CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  ctcss.cppm
.github/workflows/: tests.yml
examples/: CMakeLists.txt  README.md  theme.cpp  wellformed.cpp
include/: ctcss.hpp  cthtml.hpp
include/ctcss/: bind.hpp  grammar.hpp  match.hpp  serialize.hpp  types.hpp  value.hpp  values.hpp
include/cthtml/: bind.hpp  entities.hpp  grammar.hpp  serialize.hpp  treebuild.hpp  types.hpp
single-header/: ctcss.hpp
tests/: CMakeLists.txt  css.cpp  cxx17.cpp  document.cpp  html5.cpp  value.cpp
tools/: gen-entities.py
